<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Card_inside_settings"
    android:background="#EDE9E9"
    >

    <include layout="@layout/toolbar"
        android:id="@+id/actionBar"
        />
    <ImageButton
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_delete"
        app:tint="#EDE9E9" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="65dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#EDE9E9"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/account_inside"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/acc_in_text"
        />

    <EditText
        android:id="@+id/ET_acc_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/textobvodka"
        android:fontFamily="@font/calibri"
        android:gravity="center_horizontal"
        android:hint="@string/your_acc"
        android:inputType="number"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/acc_in_text"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/defaultobvodka"
        app:layout_constraintTop_toBottomOf="@+id/acc_in_text"
        android:layout_marginTop="15dp"
        android:id="@+id/cherta"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cherta"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/annotation"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:id="@+id/ann_in"
        android:fontFamily="@font/calibri"
        />

    <EditText
        android:id="@+id/descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textobvodka"
        android:fontFamily="@font/calibri"
        android:gravity="center_horizontal"
        android:hint="@string/noAnnotation"
        android:inputType="textLongMessage"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/ann_in"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30sp"
        android:id="@+id/list"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/plusBILLS1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descr"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:alpha="0.7"
        android:background="@drawable/blur2"
        app:layout_constraintTop_toTopOf="@+id/plusBILLS1"
        android:layout_marginTop="-25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:text="+"
        android:textStyle="bold"
        android:fontFamily="@font/calibri"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:backgroundTint="#00999E"
        android:id="@+id/plusBILLS1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/income"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="100dp"
        android:textColor="#EDE9E9"
        />

    <Button
        android:text="-"
        android:fontFamily="@font/calibri"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:backgroundTint="#00999E"
        android:id="@+id/minusBILLS1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/expenditure"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="100dp"
        android:textColor="#EDE9E9"
        />

    <TextView
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/calibri"/>

    <TextView
        android:layout_marginBottom="15dp"
        android:id="@+id/expenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenditure"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/calibri"
        />



</androidx.constraintlayout.widget.ConstraintLayout>